external-crates/move/crates/move-prover/tests/snapshots/ghost_variables_noalias_write_write.move.snap
---
source: crates/move-prover/tests/integration.rs
assertion_line: 52
expression: output
snapshot_kind: text
---
Verification failed: exiting with bytecode transformation errors
error[E0015]: global variable instantiation conflict T:
   ┌─ tests/inputs/ghost_variables_noalias_write_write.move:15:5
   │
 9 │     ghost::declare_global_mut<U, bool>();
   │     ------------------------------------
10 │     ghost::declare_global_mut<V, bool>();
   │     ------------------------------------
   ·
15 │     foo<T, T>();
   │     ^^^^^^^^^^^

error[E0015]: global variable instantiation conflict u64:
   ┌─ tests/inputs/ghost_variables_noalias_write_write.move:16:5
   │
 9 │     ghost::declare_global_mut<U, bool>();
   │     ------------------------------------
10 │     ghost::declare_global_mut<V, bool>();
   │     ------------------------------------
   ·
16 │     foo<u64, u64>();
   │     ^^^^^^^^^^^^^^^
